Remove anchors on category filters

--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -88,8 +88,7 @@
                         <!-- Language -->
                         <div class="product">
                             <div class="product_content">
-                                <div class="sidebar_title collapsible"><a
-                                        th:href="'/category/' + ${category.getId()}">Language</a></div>
+                                <div class="sidebar_title collapsible"><a>Language</a></div>
                                 <div class="sidebar_text">
                                     <form id="langaugeform">
                                         <div class="inline sidebar_expand" th:each="language : ${languages}">
@@ -125,8 +124,7 @@
                         <!-- Media Type -->
                         <!--                        <div class="product">-->
                         <!--                            <div class="product_content">-->
-                        <!--                                <div class="sidebar_title collapsible "><a-->
-                        <!--                                        th:href="'/category/' + ${category.getId()}">Media Type</a></div>-->
+                        <!--                                <div class="sidebar_title collapsible "><a>Media Type</a></div>-->
                         <!--                                <div class="sidebar_text">-->
                         <!--                                    <form id="mediaform">-->
                         <!--                                        <div class="inline sidebar_expand">-->
@@ -174,8 +172,7 @@
                         <!-- Publisher -->
                         <div class="product">
                             <div class="product_content">
-                                <div class="sidebar_title collapsible "><a
-                                        th:href="'/category/' + ${category.getId()}">Publisher</a></div>
+                                <div class="sidebar_title collapsible "><a>Publisher</a></div>
                                 <div class="sidebar_text">
                                     <form id="publisherform">
                                         <div class="inline sidebar_expand" th:each="publisher : ${publishers}">
@@ -209,8 +206,7 @@
                         <!-- Author -->
                         <div class="product">
                             <div class="product_content">
-                                <div class="sidebar_title collapsible"><a
-                                        th:href="'/category/' + ${category.getId()}">Author</a></div>
+                                <div class="sidebar_title collapsible"><a>Author</a></div>
                                 <div class="sidebar_text">
                                     <form id="authorform">
                                         <div class="inline sidebar_expand" th:each="author : ${authors}">
@@ -243,8 +239,7 @@
                         <!-- Stars -->
                         <div class="product">
                             <div class="product_content">
-                                <div class="sidebar_title collapsible "><a
-                                        th:href="'/category/' + ${category.getId()}">Rate</a></div>
+                                <div class="sidebar_title collapsible "><a>Rate</a></div>
                                 <div class="sidebar_text">
                                     <form id="starform">
                                         <div class="inline sidebar_expand">
@@ -365,8 +360,7 @@
                         <!-- Price -->
                         <div class="product">
                             <div class="product_content">
-                                <div class="sidebar_title collapsible "><a
-                                        th:href="'/category/' + ${category.getId()}">Price</a></div>
+                                <div class="sidebar_title collapsible "><a>Price</a></div>
                                 <div class="sidebar_text">
                                     <div class="wrapper">
                                         <fieldset class="filter-price">
