--- a/src/main/resources/templates/user_details/_review.html
+++ b/src/main/resources/templates/user_details/_review.html
@@ -204,7 +204,7 @@
                             <div class="product-row d-flex">
                                 <a th:href="@{'/product/' + ${review.getProductId()}}">
                                     <div>
-                                        <div class="product_image" style="padding-right: 4px">
+                                        <div class="product_image vertical_center" style="padding-right: 4px">
                                             <img class="review_product_image" alt="Product Cover Image"
                                                  th:src="|data:image/png;base64,${productService.get(review.getProductId()).getEncodedCoverImage()}|"/>
                                         </div>
