Remove todo on subcategory product type js

--- a/src/main/resources/templates/subcategory.html
+++ b/src/main/resources/templates/subcategory.html
@@ -737,7 +737,7 @@
     /*<![CDATA[*/
     var productID = $('.product_cart').attr('id');
     const categoryID = /*[[${subcategory.getId()}]]*/ 'default';
-    const productType = /*[[${subcategory.getProductType()}]]*/ 'default'; // TODO: Fix product type
+    const productType = /*[[${subcategory.getProductType()}]]*/ 'default';
 
     $('.product_cart').click(function (event) {
 
