--- a/src/main/resources/templates/user-details.html
+++ b/src/main/resources/templates/user-details.html
@@ -88,14 +88,15 @@
                                                                     id= ${user.getUserId()},
                                                                     page=(${#request.getParameter('page')} ?: '1'),
                                                                     sort=(${#request.getParameter('sort')} ?: 'date-desc'),
-                                                                    filter=(${#request.getParameter('filter')} ?: 'all'))}"
+                                                                    ratingFilter=(${#request.getParameter('ratingFilter')} ?: 'all'),
+                                                                    titleFilter=(${#request.getParameter('titleFilter')} ?: 'all'))}"
                            th:href="@{#review}">Reviews</a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link profile-navbar-text"
                            th:attr="data-url=@{/user-details/cart(size=(${#request.getParameter('size')} ?: '2'),id=${user.getUserId()}, page=(${#request.getParameter('page')} ?: '1'))}"
-                            th:href="@{#cart}">Shopping
+                           th:href="@{#cart}">Shopping
                             Cart</a>
                     </li>
 
