--- a/src/main/resources/templates/user_details/_review.html
+++ b/src/main/resources/templates/user_details/_review.html
@@ -14,7 +14,8 @@
                                                         size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${'date-desc'},
-                                                        filter=${filter})}"
+                                                        ratingFilter=${ratingFilter},
+                                                        titleFilter=${titleFilter})}"
                    th:text="'Decreasing by Date'"
                    th:style="${sort == 'date-desc'} ? 'color:#1f5b70'">
                 </a>
@@ -25,7 +26,8 @@
                                                         size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${'date-asc'},
-                                                        filter=${filter})}"
+                                                        ratingFilter=${ratingFilter},
+                                                        titleFilter=${titleFilter})}"
                    th:text="'Increasing by Date'"
                    th:style="${sort == 'date-asc'} ? 'color:#1f5b70'">
                 </a>
@@ -36,7 +38,8 @@
                                                         size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${'title-asc'},
-                                                        filter=${filter})}"
+                                                        ratingFilter=${ratingFilter},
+                                                        titleFilter=${titleFilter})}"
                    th:text="'Review Title A - Z'"
                    th:style="${sort == 'title-asc'} ? 'color:#1f5b70'">
                 </a>
@@ -47,7 +50,8 @@
                                                         size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${'title-desc'},
-                                                        filter=${filter})}"
+                                                        ratingFilter=${ratingFilter},
+                                                        titleFilter=${titleFilter})}"
                    th:text="'Review Title Z - A'"
                    th:style="${sort == 'title-desc'} ? 'color:#1f5b70'">
                 </a>
@@ -58,7 +62,8 @@
                                                         size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${'content-asc'},
-                                                        filter=${filter})}"
+                                                        ratingFilter=${ratingFilter},
+                                                        titleFilter=${titleFilter})}"
                    th:text="'Review Content A - Z'"
                    th:style="${sort == 'content-asc'} ? 'color:#1f5b70'">
                 </a>
@@ -69,7 +74,8 @@
                                                         size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${'content-desc'},
-                                                        filter=${filter})}"
+                                                        ratingFilter=${ratingFilter},
+                                                        titleFilter=${titleFilter})}"
                    th:text="'Review Content Z - A'"
                    th:style="${sort == 'content-desc'} ? 'color:#1f5b70'">
                 </a>
@@ -80,7 +86,8 @@
                                                         size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${'rate-desc'},
-                                                        filter=${filter})}"
+                                                        ratingFilter=${ratingFilter},
+                                                        titleFilter=${titleFilter})}"
                    th:text="'Decreasing by Rate'"
                    th:style="${sort == 'rate-desc'} ? 'color:#1f5b70'">
                 </a>
@@ -91,7 +98,8 @@
                                                         size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${'rate-asc'},
-                                                        filter=${filter})}"
+                                                        ratingFilter=${ratingFilter},
+                                                        titleFilter=${titleFilter})}"
                    th:text="'Increasing by Rate'"
                    th:style="${sort == 'rate-asc'} ? 'color:#1f5b70'">
                 </a>
@@ -110,8 +118,9 @@
                                                         size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${sort},
-                                                        filter=${'all'})}"
-                   th:text="'All'" th:style="${filter == 'all'} ? 'color:#1f5b70'">
+                                                        ratingFilter=${'all'},
+                                                        titleFilter=${titleFilter})}"
+                   th:text="'All'" th:style="${ratingFilter == 'all'} ? 'color:#1f5b70'">
                 </a>
             </li>
             <li class="item_filter_btn">
@@ -119,8 +128,9 @@
                                                         size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${sort},
-                                                        filter=${'1'})}"
-                   th:text="'1 Star'" th:style="${filter == '1'} ? 'color:#1f5b70'">
+                                                        ratingFilter=${'1'},
+                                                        titleFilter=${titleFilter})}"
+                   th:text="'1 Star'" th:style="${ratingFilter == '1'} ? 'color:#1f5b70'">
                 </a>
             </li>
             <li class="item_filter_btn">
@@ -128,8 +138,9 @@
                                                         size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${sort},
-                                                        filter=${'2'})}"
-                   th:text="'2 Star'" th:style="${filter == '2'} ? 'color:#1f5b70'">
+                                                        ratingFilter=${'2'},
+                                                        titleFilter=${titleFilter})}"
+                   th:text="'2 Star'" th:style="${ratingFilter == '2'} ? 'color:#1f5b70'">
                 </a>
             </li>
             <li class="item_filter_btn">
@@ -137,8 +148,9 @@
                                                         size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${sort},
-                                                        filter=${'3'})}"
-                   th:text="'3 Star'" th:style="${filter == '3'} ? 'color:#1f5b70'">
+                                                        ratingFilter=${'3'},
+                                                        titleFilter=${titleFilter})}"
+                   th:text="'3 Star'" th:style="${ratingFilter == '3'} ? 'color:#1f5b70'">
                 </a>
             </li>
             <li class="item_filter_btn">
@@ -146,8 +158,9 @@
                                                         size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${sort},
-                                                        filter=${'4'})}"
-                   th:text="'4 Star'" th:style="${filter == '4'} ? 'color:#1f5b70'">
+                                                        ratingFilter=${'4'},
+                                                        titleFilter=${titleFilter})}"
+                   th:text="'4 Star'" th:style="${ratingFilter == '4'} ? 'color:#1f5b70'">
                 </a>
             </li>
             <li class="item_filter_btn">
@@ -155,8 +168,47 @@
                                                         size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${sort},
-                                                        filter=${'5'})}"
-                   th:text="'5 Star'" th:style="${filter == '5'} ? 'color:#1f5b70'">
+                                                        ratingFilter=${'5'},
+                                                        titleFilter=${titleFilter})}"
+                   th:text="'5 Star'" th:style="${ratingFilter == '5'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="products_dropdown product_dropdown_filter">
+        <div class="isotope_filter_text"><span>Title Filter</span><i class="fa fa-caret-down"
+                                                                     aria-hidden="true"></i>
+        </div>
+        <ul>
+            <li class="item_filter_btn">
+                <a th:href="@{/user-details/{id}#review(id=${user.getUserId()},
+                                                        size=${reviewPage.size},
+                                                        page=${1},
+                                                        sort=${sort},
+                                                        ratingFilter=${ratingFilter},
+                                                        titleFilter=${'all'})}"
+                   th:text="'All'" th:style="${titleFilter == 'all'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_filter_btn">
+                <a th:href="@{/user-details/{id}#review(id=${user.getUserId()},
+                                                        size=${reviewPage.size},
+                                                        page=${1},
+                                                        sort=${sort},
+                                                        ratingFilter=${ratingFilter},
+                                                        titleFilter=${'titled'})}"
+                   th:text="'Titled'" th:style="${titleFilter == 'titled'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_filter_btn">
+                <a th:href="@{/user-details/{id}#review(id=${user.getUserId()},
+                                                        size=${reviewPage.size},
+                                                        page=${1},
+                                                        sort=${sort},
+                                                        ratingFilter=${ratingFilter},
+                                                        titleFilter=${'untitled'})}"
+                   th:text="'Untitled'" th:style="${titleFilter == 'untitled'} ? 'color:#1f5b70'">
                 </a>
             </li>
         </ul>
@@ -273,7 +325,8 @@
                                                             size=${reviewPage.size},
                                                             page=${currentPage - 1},
                                                             sort=${sort},
-                                                            filter=${filter})}"
+                                                            ratingFilter=${ratingFilter},
+                                                            titleFilter=${titleFilter})}"
                        aria-label="Previous" title="Previous Page"
                        rel="tooltip">
                         <i class="pagination_arrow fa fa-angle-left"></i>
@@ -287,7 +340,8 @@
                                                             size=${reviewPage.size},
                                                             page=${1},
                                                             sort=${sort},
-                                                            filter=${filter})}"
+                                                            ratingFilter=${ratingFilter},
+                                                            titleFilter=${titleFilter})}"
                        th:title="${'Page '+ 1}"
                        th:text="${1}" style="color: #fbaa1d;">
                     </a>
@@ -304,7 +358,8 @@
                                                             size=${reviewPage.size},
                                                             page=${i},
                                                             sort=${sort},
-                                                            filter=${filter})}"
+                                                            ratingFilter=${ratingFilter},
+                                                            titleFilter=${titleFilter})}"
                        th:text="${i}" th:title="${'Page '+ i}"
                        style="color: #fbaa1d;"></a>
                 </li>
@@ -319,7 +374,8 @@
                                                             size=${reviewPage.size},
                                                             page=${reviewPage.totalPages},
                                                             sort=${sort},
-                                                            filter=${filter})}"
+                                                            ratingFilter=${ratingFilter},
+                                                            titleFilter=${titleFilter})}"
                        th:text="${reviewPage.totalPages}"
                        style="color: #fbaa1d;"
                        th:title="${'Page '+ reviewPage.totalPages}">
@@ -332,7 +388,8 @@
                                                             size=${reviewPage.size},
                                                             page=${currentPage + 1},
                                                             sort=${sort},
-                                                            filter=${filter})}"
+                                                            ratingFilter=${ratingFilter},
+                                                            titleFilter=${titleFilter})}"
                        aria-label="Next" title="Next Page" rel="tooltip">
                         <i class="pagination_arrow fa fa-angle-right"></i>
                     </a>
