product price style fixed

--- a/src/main/resources/static/styles/main_styles.css
+++ b/src/main/resources/static/styles/main_styles.css
@@ -577,7 +577,7 @@ section {
     text-align: center;
 }
 
-.product_price {
+.product_price_recommended {
     text-align: center;
     font-size: 30px;
     color: #4a4a4a;
