--- a/src/main/resources/templates/profile/_review.html
+++ b/src/main/resources/templates/profile/_review.html
@@ -13,10 +13,11 @@
         <ul>
 
             <li class="item_sorting_btn">
-                <a th:href="@{/profile#review(size=${reviewPage.size},
-                                                page=${1},
-                                                sort=${'date-desc'},
-                                                filter=${filter})}"
+                <a th:href="@{/user-details/{id}#review(size=${reviewPage.size},
+                                                        page=${1},
+                                                        sort=${'date-desc'},
+                                                        ratingFilter=${ratingFilter},
+                                                        titleFilter=${titleFilter})}"
                    th:text="'Decreasing by Date'"
                    th:style="${sort == 'date-desc'} ? 'color:#1f5b70'">
                 </a>
@@ -26,7 +27,8 @@
                 <a th:href="@{/profile#review(size=${reviewPage.size},
                                                 page=${1},
                                                 sort=${'date-asc'},
-                                                filter=${filter})}"
+                                                ratingFilter=${ratingFilter},
+                                                titleFilter=${titleFilter})}"
                    th:text="'Increasing by Date'"
                    th:style="${sort == 'date-asc'} ? 'color:#1f5b70'">
                 </a>
@@ -36,7 +38,8 @@
                 <a th:href="@{/profile#review(size=${reviewPage.size},
                                                 page=${1},
                                                 sort=${'title-asc'},
-                                                filter=${filter})}"
+                                                ratingFilter=${ratingFilter},
+                                                titleFilter=${titleFilter})}"
                    th:text="'Review Title A - Z'"
                    th:style="${sort == 'title-asc'} ? 'color:#1f5b70'">
                 </a>
@@ -46,7 +49,8 @@
                 <a th:href="@{/profile#review(size=${reviewPage.size},
                                                 page=${1},
                                                 sort=${'title-desc'},
-                                                filter=${filter})}"
+                                                ratingFilter=${ratingFilter},
+                                                titleFilter=${titleFilter})}"
                    th:text="'Review Title Z - A'"
                    th:style="${sort == 'title-desc'} ? 'color:#1f5b70'">
                 </a>
@@ -56,7 +60,8 @@
                 <a th:href="@{/profile#review(size=${reviewPage.size},
                                                 page=${1},
                                                 sort=${'content-asc'},
-                                                filter=${filter})}"
+                                                ratingFilter=${ratingFilter},
+                                                titleFilter=${titleFilter})}"
                    th:text="'Review Content A - Z'"
                    th:style="${sort == 'content-asc'} ? 'color:#1f5b70'">
                 </a>
@@ -66,7 +71,8 @@
                 <a th:href="@{/profile#review(size=${reviewPage.size},
                                                 page=${1},
                                                 sort=${'content-desc'},
-                                                filter=${filter})}"
+                                                ratingFilter=${ratingFilter},
+                                                titleFilter=${titleFilter})}"
                    th:text="'Review Content Z - A'"
                    th:style="${sort == 'content-desc'} ? 'color:#1f5b70'">
                 </a>
@@ -76,7 +82,8 @@
                 <a th:href="@{/profile#review(size=${reviewPage.size},
                                                 page=${1},
                                                 sort=${'rate-desc'},
-                                                filter=${filter})}"
+                                                ratingFilter=${ratingFilter},
+                                                titleFilter=${titleFilter})}"
                    th:text="'Decreasing by Rate'"
                    th:style="${sort == 'rate-desc'} ? 'color:#1f5b70'">
                 </a>
@@ -86,12 +93,12 @@
                 <a th:href="@{/profile#review(size=${reviewPage.size},
                                                 page=${1},
                                                 sort=${'rate-asc'},
-                                                filter=${filter})}"
+                                                ratingFilter=${ratingFilter},
+                                                titleFilter=${titleFilter})}"
                    th:text="'Increasing by Rate'"
                    th:style="${sort == 'rate-asc'} ? 'color:#1f5b70'">
                 </a>
             </li>
-
         </ul>
     </div>
 
@@ -104,53 +111,95 @@
                 <a th:href="@{/profile#review(size=${reviewPage.size},
                                                 page=${1},
                                                 sort=${sort},
-                                                filter=${'all'})}"
-                   th:text="'All'" th:style="${filter == 'all'} ? 'color:#1f5b70'">
+                                                ratingFilter=${'all'},
+                                                titleFilter=${titleFilter})}"
+                   th:text="'All'" th:style="${ratingFilter == 'all'} ? 'color:#1f5b70'">
                 </a>
             </li>
             <li class="item_filter_btn">
                 <a th:href="@{/profile#review(size=${reviewPage.size},
                                                 page=${1},
                                                 sort=${sort},
-                                                filter=${'1'})}"
-                   th:text="'1 Star'" th:style="${filter == '1'} ? 'color:#1f5b70'">
+                                                ratingFilter=${'1'},
+                                                titleFilter=${titleFilter})}"
+                   th:text="'1 Star'" th:style="${ratingFilter == '1'} ? 'color:#1f5b70'">
                 </a>
             </li>
             <li class="item_filter_btn">
                 <a th:href="@{/profile#review(size=${reviewPage.size},
                                                 page=${1},
                                                 sort=${sort},
-                                                filter=${'2'})}"
-                   th:text="'2 Star'" th:style="${filter == '2'} ? 'color:#1f5b70'">
+                                                ratingFilter=${'2'},
+                                                titleFilter=${titleFilter})}"
+                   th:text="'2 Star'" th:style="${ratingFilter == '2'} ? 'color:#1f5b70'">
                 </a>
             </li>
             <li class="item_filter_btn">
                 <a th:href="@{/profile#review(size=${reviewPage.size},
                                                 page=${1},
                                                 sort=${sort},
-                                                filter=${'3'})}"
-                   th:text="'3 Star'" th:style="${filter == '3'} ? 'color:#1f5b70'">
+                                                ratingFilter=${'3'},
+                                                titleFilter=${titleFilter})}"
+                   th:text="'3 Star'" th:style="${ratingFilter == '3'} ? 'color:#1f5b70'">
                 </a>
             </li>
             <li class="item_filter_btn">
                 <a th:href="@{/profile#review(size=${reviewPage.size},
                                                 page=${1},
                                                 sort=${sort},
-                                                filter=${'4'})}"
-                   th:text="'4 Star'" th:style="${filter == '4'} ? 'color:#1f5b70'">
+                                                ratingFilter=${'4'},
+                                                titleFilter=${titleFilter})}"
+                   th:text="'4 Star'" th:style="${ratingFilter == '4'} ? 'color:#1f5b70'">
                 </a>
             </li>
             <li class="item_filter_btn">
                 <a th:href="@{/profile#review(size=${reviewPage.size},
                                                 page=${1},
                                                 sort=${sort},
-                                                filter=${'5'})}"
-                   th:text="'5 Star'" th:style="${filter == '5'} ? 'color:#1f5b70'">
+                                                ratingFilter=${'5'},
+                                                titleFilter=${titleFilter})}"
+                   th:text="'5 Star'" th:style="${ratingFilter == '5'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="products_dropdown product_dropdown_filter">
+        <div class="isotope_filter_text"><span>Title Filter</span><i class="fa fa-caret-down"
+                                                                     aria-hidden="true"></i>
+        </div>
+        <ul>
+            <li class="item_filter_btn">
+                <a th:href="@{/profile#review(size=${reviewPage.size},
+                                                page=${1},
+                                                sort=${sort},
+                                                ratingFilter=${ratingFilter},
+                                                titleFilter=${'all'})}"
+                   th:text="'All'" th:style="${titleFilter == 'all'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_filter_btn">
+                <a th:href="@{/profile#review(size=${reviewPage.size},
+                                                page=${1},
+                                                sort=${sort},
+                                                ratingFilter=${ratingFilter},
+                                                titleFilter=${'titled'})}"
+                   th:text="'Titled'" th:style="${titleFilter == 'titled'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_filter_btn">
+                <a th:href="@{/profile#review(size=${reviewPage.size},
+                                                page=${1},
+                                                sort=${sort},
+                                                ratingFilter=${ratingFilter},
+                                                titleFilter=${'untitled'})}"
+                   th:text="'Untitled'" th:style="${titleFilter == 'untitled'} ? 'color:#1f5b70'">
                 </a>
             </li>
         </ul>
     </div>
 </div>
+
 </span>
 
 <span th:if="${reviewPage.totalPages > 0}">
@@ -260,7 +309,8 @@
                     <a th:href="@{/profile#review(size=${reviewPage.size},
                                                     page=${currentPage - 1},
                                                     sort=${sort},
-                                                    filter=${filter})}"
+                                                    ratingFilter=${ratingFilter},
+                                                    titleFilter=${titleFilter})}"
                        aria-label="Previous" title="Previous Page"
                        rel="tooltip">
                         <i class="pagination_arrow fa fa-angle-left"></i>
@@ -273,7 +323,8 @@
                     <a th:href="@{/profile#review(size=${reviewPage.size},
                                                     page=${1},
                                                     sort=${sort},
-                                                    filter=${filter})}"
+                                                    ratingFilter=${ratingFilter},
+                                                    titleFilter=${titleFilter})}"
                        th:title="${'Page '+ 1}"
                        th:text="${1}" style="color: #fbaa1d;">
                     </a>
@@ -289,7 +340,8 @@
                     <a th:href="@{/profile#review(size=${reviewPage.size},
                                                     page=${i},
                                                     sort=${sort},
-                                                    filter=${filter})}"
+                                                    ratingFilter=${ratingFilter},
+                                                    titleFilter=${titleFilter})}"
                        th:text="${i}" th:title="${'Page '+ i}"
                        style="color: #fbaa1d;"></a>
                 </li>
@@ -303,7 +355,8 @@
                     <a th:href="@{/profile#review(size=${reviewPage.size},
                                                     page=${reviewPage.totalPages},
                                                     sort=${sort},
-                                                    filter=${filter})}"
+                                                    ratingFilter=${ratingFilter},
+                                                    titleFilter=${titleFilter})}"
                        th:text="${reviewPage.totalPages}"
                        style="color: #fbaa1d;"
                        th:title="${'Page '+ reviewPage.totalPages}">
@@ -315,7 +368,8 @@
                     <a th:href="@{/profile#review(size=${reviewPage.size},
                                                     page=${currentPage + 1},
                                                     sort=${sort},
-                                                    filter=${filter})}"
+                                                    ratingFilter=${ratingFilter},
+                                                    titleFilter=${titleFilter})}"
                        aria-label="Next" title="Next Page" rel="tooltip">
                         <i class="pagination_arrow fa fa-angle-right"></i>
                     </a>
